# ins-cli

./: .gitignore  ARCHITECTURE.md  README.md  backup_chrome.sh  pyproject.toml
src/ins_cli/: __init__.py  auth.py  browser.py  cli.py  reader.py  writer.py
